--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 </head>
 <body>
 	<div class="header">
-		<div class="logo"></div>
+		<div class="logo"><h3>Some gallery</h3></div>
+		<div class="nav">
+			<p><a href="#">Home</a>><a href="#">Gallery</a></p>
+		</div>
 	</div>
 
 	<div class="content">
