--- a/index.html
+++ b/index.html
@@ -7,24 +7,26 @@
 </head>
 <body>
 	<div class="header">
+		
 		<div class="logo"><h3>Some gallery</h3></div>
-		<div class="nav">
-			<p><a href="#">Home</a>><a href="#">Gallery</a></p>
-		</div>
+			
+			<div class="nav">
+				<p><a href="#">Home</a>><a href="#">Gallery</a></p>
+			</div>
 	</div>
 
 	<div class="content">
 		<ul class="gallery">
-			<li class="gallery__link"><a href="http://lorempixel.com/400/200" class="gallery__item"></a></li>
-			<li class="gallery__link"><a href="http://lorempixel.com/200/200" class="gallery__item"></a></li>
-			<li class="gallery__link"><a href="http://lorempixel.com/200/200" class="gallery__item"></a></li>
-			<li class="gallery__link"><a href="http://lorempixel.com/200/200" class="gallery__item"></a></li>
-			<li class="gallery__link"><a href="http://lorempixel.com/200/200" class="gallery__item"></a></li>
-			<li class="gallery__link"><a href="http://lorempixel.com/200/200" class="gallery__item"></a></li>
-			<li class="gallery__link"><a href="http://lorempixel.com/200/200" class="gallery__item"></a></li>
-			<li class="gallery__link"><a href="http://lorempixel.com/200/200" class="gallery__item"></a></li>
-			<li class="gallery__link"><a href="http://lorempixel.com/200/200" class="gallery__item"></a></li>
-			<li class="gallery__link"><a href="http://lorempixel.com/200/200" class="gallery__item"></a></li>
+			<li class="gallery__link"><a href="#" class="gallery__item"><img src="http://lorempixel.com/200/200" alt=""></a></li>
+			<li class="gallery__link"><a href="#" class="gallery__item"><img src="http://lorempixel.com/200/200" alt=""></a></li>
+			<li class="gallery__link"><a href="#" class="gallery__item"><img src="http://lorempixel.com/200/200" alt=""></a></li>
+			<li class="gallery__link"><a href="#" class="gallery__item"><img src="http://lorempixel.com/200/200" alt=""></a></li>
+			<li class="gallery__link"><a href="#" class="gallery__item"><img src="http://lorempixel.com/200/200" alt=""></a></li>
+			<li class="gallery__link"><a href="#" class="gallery__item"><img src="http://lorempixel.com/200/200" alt=""></a></li>
+			<li class="gallery__link"><a href="#" class="gallery__item"><img src="http://lorempixel.com/200/200" alt=""></a></li>
+			<li class="gallery__link"><a href="#" class="gallery__item"><img src="http://lorempixel.com/200/200" alt=""></a></li>
+			<li class="gallery__link"><a href="#" class="gallery__item"><img src="http://lorempixel.com/200/200" alt=""></a></li>
+			<li class="gallery__link"><a href="#" class="gallery__item"><img src="http://lorempixel.com/200/200" alt=""></a></li>
 		</ul>
 	</div>
 </body>
