--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 	<div class="header">
 		
-		<div class="logo"><h3>Some gallery</h3></div>
+		<div class="logo"><h1>Some gallery</h1></div>
 			
 			<div class="nav">
 				<p><a href="#">Home</a>><a href="#">Gallery</a></p>
@@ -29,5 +29,10 @@
 			<li class="gallery__link"><a href="#" class="gallery__item"><img src="http://lorempixel.com/200/200" alt=""></a></li>
 		</ul>
 	</div>
+
+	<div class="footer">
+			
+	</div>
+
 </body>
 </html>
