--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 	<div class="header">
 		
 		<div class="logo"><h1>Some gallery</h1></div>
-			
-			<div class="nav">
-				<p><a href="#">Home</a>><a href="#">Gallery</a></p>
-			</div>
+				
 	</div>
 
 	<div class="content">
+	<div class="nav">
+				<a href="#" class="nav__item">Home</a>><a href="#" class="nav__item">Gallery</a>
+			</div>
 		<ul class="gallery">
 			<li class="gallery__link"><a href="#" class="gallery__item"><img src="http://lorempixel.com/200/200" alt=""></a></li>
 			<li class="gallery__link"><a href="#" class="gallery__item"><img src="http://lorempixel.com/200/200" alt=""></a></li>
@@ -31,7 +31,7 @@
 	</div>
 
 	<div class="footer">
-			
+	© All rights reserved.
 	</div>
 
 </body>
